@@ -84,7 +84,7 @@ Testing
 		
 	and type
 	
-		make
+		make test
 		
 	Before running the test app, you will need to create the following directory
 	tree where the test app is:
