@@ -25,6 +25,8 @@ libgluezilla_la_SOURCES = 	\
 
 libgluezilla_la_LIBADD = $(GLUEZILLA_LIBS)
 
+EXTRA_DIST = FastDelegate.h
+
 debug:
 	LD_LIBRARY_PATH=.libs gdb 
 
