@@ -1,3 +1,7 @@
+2007-10-18  Wade Berrier  <wberrier@novell.com>
+
+	* Makefile.am: Add missing headers to EXTRA_DIST
+
 2007-10-18  Andreia Gaita  <avidigal@novell.com>
 
 	* Widget.cpp: fix pointer cast for 64-bit arch, fix asynch 
